<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="about_me_text">About Me ( Describe yourself )</string>
	<string name="accept">Accept</string>
	<string name="accept_phone_call">Accept Phone Call</string>
	<string name="accept_truth_or_dare">Accept Truth Or Dare</string>
	<string name="accept_video_chat">Accept Video Chat</string>
	<string name="activity_title">Title</string>
 	<string name="activity_about_title">About My P2P Web</string>
	<string name="activity_main_title">My P2P Web Main Menu</string>
 	<string name="activity_anchor_settings_title">Anchor Settings</string>
 	<string name="activity_browse_files_title">Files On Device</string>
	<string name="activity_navigator_title">File Navigator</string>
	<string name="activity_cam_server">Web Cam Server</string>
	<string name="activity_cam_client">Web Cam Client</string>
	<string name="activity_cam_test">Camera Test</string>
	<string name="activity_camera_name">Take About Me Picture</string>
 	<string name="activity_camera_settings_name">Camera Settings</string>
 	<string name="activity_camera_snapshot_title">Take Camera Snapshot</string>
 	<string name="activity_change_friendship_name">Change Friendship</string>
 	<string name="activity_confirm_shred_file_title">Confirm Shred File</string>
	<string name="activity_create_profile_name">My P2P Web Login</string>
	<string name="activity_downloads_title">Downloads</string>
	<string name="activity_edit_account_title">Edit Mood Message</string>
	<string name="activity_edit_profile_title">Edit About Me Web Page</string>
	<string name="activity_edit_plugin_permissions">Edit Plugin Permissions</string>
	<string name="activity_edit_relay_permissions">Edit Relay Permissions</string>
	<string name="activity_edit_storyboard_title">Edit My Story Board</string>
	<string name="activity_file_server">File Sharing</string>
	<string name="activity_file_offer">File Offer</string>
	<string name="activity_manage_anchor_settings_title">Manage Anchor Setting</string>
	<string name="activity_network_settings_title">Network Settings</string>
	<string name="activity_network_status_title">Network Status</string>
	<string name="activity_offers_name">Offers</string>
	<string name="activity_people_search_name">People Search</string>
    <string name="activity_personal_recorder_title">Personal Recorder</string>
    <string name="activity_phone_book_title">Add Contacts with Photo</string>
	<string name="activity_phone_shake_title">Add Friend By Shaking Phone</string>
	<string name="activity_pick_image_title">Pick Image Or Take Photo</string>
	<string name="activity_scan_profiles_name">Scan About Me Pictures</string>
	<string name="activity_scan_web_cams_name">Scan Web Cams</string>
	<string name="activity_setup_name">Options</string>
	<string name="activity_sdcard_name">SD Card Not Available</string>
	<string name="activity_sdcard_title">SD Card Availability</string>
	<string name="activity_select_file_to_send_title">Select File To Send</string>
	<string name="activitity_test_network_name">Testing Network</string>
	<string name="activity_startup">My P2P Web Startup</string>
	<string name="activity_scan_by_name_title">Search Person By Name</string>
	<string name="activity_scan_by_mood_msg_title">Search Person By Mood Message</string>
    <string name="activity_scan_profiles_title">Scan About Me Pictures</string>
    <string name="activity_scan_web_cams_title">Scan Web Cams</string>
    <string name="activity_scan_by_name_label">Search For Name ( at least 3 characters )</string>
    <string name="activity_scan_by_mood_msg_label">Search For Mood Message ( at least 3 characters )</string>
    <string name="activity_to_friend_call_phone_num_title">Call Phone Number</string>
   	<string name="activity_to_friend_offer_file_title">Offer File</string>
    <string name="activity_to_friend_multisession_title">Chat Session</string>
    <string name="activity_to_friend_request_relay_name">Request Relay Service</string>
    <string name="activity_to_friend_voice_phone_name">Voice Phone (VOIP)</string>
	<string name="activity_to_friend_video_phone_name">Video Chat</string>
	<string name="activity_to_friend_tod_game_name">Truth Or Dare Game</string>
	<string name="activity_to_friend_story_board_name">Story Board</string>
	<string name="activity_to_friend_request_proxy_name">Prefered Relay</string>
	<string name="activity_to_friend_view_shared_files_title">View Friend Shared Files</string>
	<string name="activity_test_network_name">Test Network</string>
	<string name="activity_test_anchor_settings_title">Test Anchor Settings</string>
	<string name="activity_test_is_my_port_open_title">Test Is My Port Open</string>
	<string name="activity_uploads_title">Uploads</string>
	<string name="activity_view_library_files_title">Library Files</string>
    <string name="activity_view_photo_title">Photo Viewer</string>
    <string name="activity_view_shared_files_title">Shared Files</string>
    <string name="activity_view_video_file_title">View Video File</string>
    <string name="activity_view_audio_file_title">View Audio File</string>
	<string name="activity_web_server">About Me Web Page</string>
    <string name="action_settings">Settings</string>
	<string name="add_contact">Add Contact</string>
	<string name="add_files">Add Files</string>
	<string name="add_friend">Add Friend</string>
    <string name="anchor_settings_button_text">Anchor Settings (Select P2P Network)</string>
    <string name="anchor_setting_new_name">Anchor Setting New Name</string>
	<string name="anchor_test_url">Anchor URL with port</string>
    <string name="app_name">My P2P Web</string>
    <string name="app_start">My P2P Web Start</string>
    <string name="app_website">http://www.gotvp2p.net</string>
    <string name="app_copyright_line1"> Copyright &#169; 2009,2016 Brett R. Jones</string>
    <string name="app_copyright_line2">All rights reserved.</string>
    <string name="app_version">Version 1.0</string>
	<string name="apply_settings">Apply Settings</string>
	<string name="available_shared_cams">Available Shared Cams: </string>
	<string name="back">Back</string>
	<string name="back_button_text">X</string>
	<string name="back_camera">Back Camera</string>
	<string name="begin_record">Begin Record</string>
	<string name="browse_text">Browse</string>
	<string name="browse_for_file_on_device">Browse For File On Device</string>
	<string name="browse_for_photo_on_device">Browse For Image On Device</string>
	<string name="button_apply_text">Apply</string>
	<string name="button_cancel_text">Cancel</string>
	<string name="button_phone_shake_label">Simulate Phone Shake</string>
    <string name="button_scan_stop_scan_label">Stop Search</string>
    <string name="button_scan_again_label">Search Again</string>
    <string name="button_scan_cancel_label">Stop Session</string>
	<string name="button_help_text">\?</string>
    <string name="camera">Camera</string>
	<string name="cancel">Cancel</string>
	<string name="cancel_record">Cancel Record</string>
	<string name="call_contacts_phone_number">Dial Contact\'s Phone Number</string>
	<string name="cam_preview_disabled">Cam Preview Disabled</string>
	<string name="cam_preview_enabled">Cam Preview Enabled</string>
	<string name="cam_view">Cam View</string>
	<string name="cam_thumbnail">Cam Thumbnail</string>
	<string name="cannot_switch_cam_only_1">Cannot switch cams because there is only one</string>
	<string name="challenge_truth">Challenge Truth</string>
	<string name="challenge_dare">Challenge Dare</string>
	<string name="challenges">Challenges</string>
	<string name="change_friendship_note_a">NOTE: Friendship Level Determines Which Plugin(s) He or She Can Access</string>
	<string name="change_friendship_note_b">Change Plugin Access Level In Options->Edit Plugin Permissions</string>
	<string name="choose_image">Choose Image</string>
	<string name="choose_image_canceled_by_user">Choose Image Canceled By User</string>
	<string name="choose_file_from_your_library">Choose File From Your Library</string>
	<string name="choose_photo_from_gallery">Choose Photo From Gallery</string>
    <string name="clear">Clear</string>
    <string name="color_picker_wheel">HSV Color Wheel</string>
    <string name="color_picker_exact">ARGB Value</string>
    <string name="connect_test_url">Connect Test URL with port</string>
    <string name="contacts_list">Contacts List</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_offline">Contact Offline </string>
    <string name="continue_text">Continue</string>
	<string name="dares">Dares</string>
	<string name="default_about_me_contents">I am wonderful</string>
	<string name="default_mood_content_text">Lets communicate</string>
	<string name="default_greeting_text">Hi There</string>
    <string name="default_text">default</string>
    <string name="delete_this_setting">Delete This Setting</string>
	<string name="display_name">Display Name</string>
	<string name="documents">Documents</string>
	<string name="done_button_text">Done</string>
	<string name="example1_url">http://207.56.88.45:45123</string>
    <string name="example2_url">http://yourdomainname:8900</string>
	<string name="front_camera">Front Camera</string>
	<string name="hide_preview">Hide Preview</string>
	<string name="import_from_phone_contacts">Import From Phone Contacts</string>
	<string name="mobile_phone">Mobile Phone</string>
    <string name="make_device_an_anchor">Make this device an Anchor</string>
    <string name="make_anchor_explain_text1">Only check this box if you are stting up your own network.</string>
    <string name="make_anchor_explain_text2">If this box is checked then the Anchor URL should be the URL of this device and other users must be able to directly connect to this device.</string>
    <string name="manage_settings">Manage Settings</string>
	<string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="net_settings_button_anchor_settings">Anchor Settings (Select P2P Network)</string>
    <string name="net_settings_this_devices_settings">This Device\'s Network Settings</string>
    <string name="net_settings_how_determine_port_open">How to determine if can direct connect (Is Port Open?)</string>
    <string name="net_settings_connect_test">Use Connection Test To Test For Firewall (recommended)</string>
    <string name="net_settings_connect_direct">Assume Users Can Connect Directly (No Firewall)</string>
    <string name="net_settings_external_ip"> External IP: </string>
    <string name="net_settings_connect_relay">Assume Relay Is Required (Device is behind Firewall)</string>
    <string name="net_settings_adapter_ip_label">Local Network Adapter IP (recommend default)</string>
    <string name="net_settings_enable_upnp">Enable UPNP to open router port (recommended)</string>
    <string name="net_settings_port">Listen Port: </string>
    <string name="net_settings_randomize_port">  Randomize Port  </string>
    <string name="net_settings_test_port_button_text">Test Is Port Open (Can Direct Connect)</string>
    <string name="network_name">Network Name (minimum 6 characters)</string>
	<string name="permission_administrators_only">Administrators Only</string>
	<string name="permission_friends_only">Friends And Administrators Only</string>
	<string name="permission_friends_and_guests">Guests And Friends And Administrators</string>
	<string name="permission_anybody">Anybody (Anonymous)</string>
	<string name="permission_nobody">Nobody (Disabled)</string>
    <string name="photo">Photo</string>
    <string name="question_mark">"?"</string>
	<string name="relay_user_count">Number Of Relays For Use By Users (min=0 max=10)</string>
	<string name="relay_anon_count">Number Of Relays For Use By System (min=2 max=10)</string>
 	<string name="rotate_camera">Rotate Camera</string>
	<string name="rotate_image">Rotate Image</string>
    <string name="verify_settings">Verify Settings</string>
</resources>