<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
	 <include layout="@layout/reuse_activity_title" /> 
	 <TextView
        android:id="@+id/user_relay_cnt_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay_user_count" />   
        
     <EditText
         android:id="@+id/relay_user_cnt_edit"
         android:inputType="number"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10" />
 	 
	
     <RadioGroup android:layout_width="fill_parent"
             android:layout_height="wrap_content" 	
             android:orientation="vertical"
             android:id="@+id/permission_radio_group">
       <RadioButton android:checked="false"
            android:text="@string/permission_administrators_only" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_administrator" />
         <RadioButton android:checked="false"
            android:text="@string/permission_friends_only" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_friend" />
       <RadioButton android:checked="false"
            android:text="@string/permission_friends_and_guests" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_guest" />
       <RadioButton android:checked="false"
            android:text="@string/permission_anybody" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_anonymous" />
       <RadioButton android:checked="false"
            android:text="@string/permission_nobody" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_disable" />
     </RadioGroup>
     <TextView
        android:id="@+id/anon_relay_cnt_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relay_anon_count" />  
  
     <EditText
         android:id="@+id/relay_anon_cnt_edit"
         android:inputType="number"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10" />
            
     <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
		<Button android:id="@+id/but_permission_ok"
		 	        android:layout_weight="1"   		
					android:layout_width="0dip"
		  			android:layout_height="wrap_content"
		   		    android:text="@string/button_apply_text"
		 	 		android:textColor="#000000"
		  			android:textStyle="bold"
		  			android:background="@drawable/button_green"/>
		<Button android:id="@+id/but_permission_cancel"
		 	        android:layout_weight="1"   		
					android:layout_width="0dip"
		  			android:layout_height="wrap_content"
		   		    android:text="@string/button_cancel_text"
		 	 		android:textColor="#000000"
		  			android:textStyle="bold"
		  			android:background="@drawable/button_green"/>
     </LinearLayout>
</LinearLayout>

