<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        
	 <include layout="@layout/reuse_activity_title" /> 
	
     <RadioGroup android:layout_width="match_parent"
             android:layout_height="wrap_content" 	
             android:orientation="vertical"
             android:id="@+id/permission_radio_group">
       <RadioButton android:checked="false"
            android:text="@string/permission_administrators_only" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_administrator" />
       <RadioButton android:checked="false"
            android:text="@string/permission_friends_only" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_friend" />
       <RadioButton android:checked="false"
            android:text="@string/permission_friends_and_guests" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_guest" />
       <RadioButton android:checked="false"
            android:text="@string/permission_anybody" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_anonymous" />
       <RadioButton android:checked="false"
            android:text="@string/permission_nobody" 
			android:layout_weight="0"
			android:layout_gravity="left"
			android:textStyle="bold"
            android:id="@+id/permission_disable" />
     </RadioGroup>
     
     <include layout="@layout/reuse_accept_cancel" />
 </LinearLayout>

