<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
	<RelativeLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" > 
	    
    	<include layout="@layout/reuse_activity_title" android:id="@+id/activity_edit_contact_info_title_id" />
	    
 	    <Button
	        android:id="@+id/import_from_phone_contacts_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:layout_below="@id/activity_edit_contact_info_title_id"   	                               
	        android:text="@string/import_from_phone_contacts" />

	    <TextView android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:text="@string/display_name" 
	        android:layout_below="@id/import_from_phone_contacts_button"   	
			android:id="@+id/online_name_label">
		</TextView>
			    
	    <EditText
	        android:id="@+id/contact_name_edit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true" 
	        android:inputType="textCapWords"   
	        android:layout_below="@id/online_name_label"   	   	             
	        android:hint="@string/display_name" />
	    
	    <TextView android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:text="@string/mobile_phone_number" 
	        android:layout_below="@id/contact_name_edit"   
			android:id="@+id/mobile_phone_number_label">
		</TextView>
			
	    <EditText
	        android:id="@+id/mobile_phone_num_edit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:inputType="phone"
	        android:layout_below="@id/mobile_phone_number_label"        
	        android:hint="@string/mobile_phone" />
	    
	    <ImageButton 
	        android:id="@+id/phone_book_photo_image"
	        android:layout_width="100dp"
	        android:layout_height="100dp"        
	        android:scaleType="fitCenter"
	        android:layout_centerHorizontal="true"
	        android:contentDescription="@string/photo"
	        android:src="@android:drawable/picture_frame"
	        android:layout_below="@id/mobile_phone_num_edit" />
	        
	    <Button
	        android:id="@+id/phone_book_add_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:layout_below="@id/phone_book_photo_image"                
	        android:text="@string/add_contact" />
	    
	    <Button
	        android:id="@+id/phone_book_list_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:layout_below="@id/phone_book_add_button"                
	        android:text="@string/contacts_list" />
	    
	</RelativeLayout>

</ScrollView>