<?xml version="1.0" encoding="utf-8"?>

<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<include android:id="@+id/titleId111" layout="@layout/reuse_activity_title"/>
	 
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:orientation="vertical" >
	 
	        <Button
	            android:id="@+id/net_settings_button_anchor_settings"
	            android:layout_width="match_parent"
	            android:layout_height="32dp"
	            android:background="@drawable/button_green"
	            android:paddingLeft="8dp"
	            android:paddingRight="8dp"
	            android:textAppearance="?android:attr/textAppearanceSmall" 
		        android:textStyle="bold"	            
	            android:text="@string/net_settings_button_anchor_settings" />
	
	        <TextView
	            android:id="@+id/net_settings_this_device_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/net_settings_this_devices_settings"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <TextView
	            android:id="@+id/net_settings_how_determine_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/net_settings_how_determine_port_open"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	         
	        <RadioGroup
	            android:id="@+id/require_proxy_radio_group"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <RadioButton
	                android:id="@+id/use_connection_test_radio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/net_settings_connect_test" />
	
	            <RadioButton
	                android:id="@+id/assume_no_firewall_radio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/net_settings_connect_direct" />
	            
	          <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
		            <TextView
		                android:id="@+id/label_external_ip"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/net_settings_external_ip"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		            <EditText
		                android:id="@+id/external_ip_edit"
		                android:inputType="number"
		                android:layout_width="0dip"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:ems="10" />
		
		            <Button
		                android:id="@+id/external_ip_help_button"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:background="@drawable/button_green"
		                android:text="@string/question_mark"
		                android:textColor="#000000"
		                android:textStyle="bold" />
	        	</LinearLayout>
	            
	
	            <RadioButton
	                android:id="@+id/assume_firewall_radio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/net_settings_connect_relay" />
	        </RadioGroup>
	        
	        <TextView
	            android:id="@+id/net_settings_adapter_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/net_settings_adapter_ip_label"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	        <Spinner
	            android:id="@+id/net_settings_network_adapter_ip_spinner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	
	        <CheckBox
	            android:id="@+id/net_settings_upnp_checkBox"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/net_settings_enable_upnp" />
	 
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/net_settings_port_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/net_settings_port"
	                android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            <EditText
	                android:id="@+id/net_settings_port_edit"
	                android:inputType="number"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10" />
	
	            <Button
	                android:id="@+id/net_settings_randomize_port_button"
	                android:layout_width="wrap_content"
	                android:layout_height="32dp"
	                android:paddingLeft="8dp"
	                android:paddingRight="8dp"
	                android:background="@drawable/button_green"
	                android:text="@string/net_settings_randomize_port"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#000000"
	                android:textStyle="bold" />
	        </LinearLayout>
	
	        <Button
	            android:id="@+id/net_settings_test_port_button"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:paddingLeft="8dp"
	            android:paddingRight="8dp"
	            android:background="@drawable/button_green"
	            android:text="@string/net_settings_test_port_button_text"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="#000000"
	            android:textStyle="bold" />
	    </LinearLayout>	
	</ScrollView>
</LinearLayout>	