<?xml version="1.0" encoding="utf-8"?>


 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include  layout="@layout/reuse_activity_title" android:id="@+id/activity_anchor_settings_title_id" />
        
        <Spinner
            android:id="@+id/anchor_settings_name_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/label_anchor_settings_url_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anchor_test_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/label_anchor_settings_url_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example1_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/label_anchor_settings_url_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example2_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
            android:id="@+id/anchor_url_edit"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
       <TextView
            android:id="@+id/label_anchor_settings_url_network_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
            android:id="@+id/anchor_settings_network_name_edit"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
        
        <TextView
            android:id="@+id/lable_make_anchor_explain_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_anchor_explain_text1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lable_make_anchor_explain_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_anchor_explain_text2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/check_box_make_anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_device_an_anchor"/>
        
        <TextView
            android:id="@+id/label_connect_test_settings_url_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_test_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/label_connect_test_settings_url_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example1_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/label_connect_test_settings_url_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example2_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <EditText
            android:id="@+id/connection_test_url_edit"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/anchor_settings_verify_button"
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:background="@drawable/button_green"
            android:text="@string/verify_settings"
            android:textColor="#000000"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/anchor_settings_manage_button"
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:background="@drawable/button_green"
            android:text="@string/manage_settings"
            android:textColor="#000000"
            android:textStyle="bold" />
        
    </LinearLayout>
</ScrollView>