<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">

  	<include layout="@layout/reuse_activity_title" />
   
    <LinearLayout
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
      	<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

 			<Button android:id="@+id/rotate_camera_but"
	            android:layout_weight="1"   		
	  			android:layout_width="0dip"
	     		android:layout_height="wrap_content"
        		android:text="@string/rotate_camera"
	     		android:textColor="#000000"
	     		android:textStyle="bold"
	     		android:background="@drawable/button_green_normal_x240"/>
      	    
      		<Button
      		    android:id="@+id/rotate_image_but"
      		    android:layout_width="0dip"
      		    android:layout_height="wrap_content"
      		    android:layout_weight="1"
      		    android:background="@drawable/button_green_normal_x240"
      		    android:text="@string/rotate_image"
      		    android:textColor="#000000"
      		    android:textStyle="bold" />
                   
   		</LinearLayout>   
        
      	<LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">            

 			<Button android:id="@+id/front_camera_but"
	            android:layout_weight="1"   		
	  			android:layout_width="0dip"
	     		android:layout_height="wrap_content"
        		android:text="@string/front_camera"
	     		android:textColor="#000000"
	     		android:textStyle="bold"
	     		android:background="@drawable/button_green_normal_x240"/>
 			
			<Button android:id="@+id/back_camera_but"
	            android:layout_weight="1"   		
	  			android:layout_width="0dip"
	     		android:layout_height="wrap_content"
        	    android:text="@string/back_camera"
	     		android:textColor="#000000"
	     		android:textStyle="bold"
	     		android:background="@drawable/button_green_normal_x240"/>

			<Button
			    android:id="@+id/hide_preview_but"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:background="@drawable/button_green_normal_x240"
			    android:text="@string/hide_preview"
			    android:textColor="#000000"
			    android:textStyle="bold" />
                   
   		</LinearLayout>   
   		           		           
   </LinearLayout>
    
    <include layout="@layout/reuse_cam_view" />

</LinearLayout>   
 